[package]
name = "minijam87"
version = "0.1.0"
edition = "2018"
authors = ["White Oak"]

[dependencies]
bevy = { version = "0.5.0", features = [] }
bevy_prototype_lyon = "0.3.1"
hex2d = "1.1.0"
hex2d-dpcext = { git = "https://github.com/White-Oak/hex2d-dpcext-rs"}
rand = "0.8.4"

[profile.release]
panic = "abort"
strip = true
lto = "thin"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
